--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -9,6 +9,7 @@
         <form method="post">
             {{ form.as_p }}
             {% csrf_token %}
+            <botton type = "submit">ログイン</botton>
             {% for error in form.non_field_errors %}
             <div class="alert alert-danger" role="alert">
                 <p>{{ error }}</p>
