--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,8 @@
         {% if request.user.is_authenticated %}
         <h3><a href="{% url 'tweets:home' %}">Twitter Clone</a></h3>
         <a href="{% url 'accounts:logout'%}">ログアウトする</a>
-        <a href="{% url 'accounts:user_profile' user.username %}"><button type="button">{{ user.username }}</button></a>
+        <a href="{% url 'accounts:user_profile' request.user.username %}"><button type="button">{{ user.username }}</button></a>
+
         {% else %}
         <h3><a href="{% url 'welcome:index'%}">Twitter Clone</a></h3>
         <a href="{% url 'accounts:login'%}">ログインページ</a>
